--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 #内核源码地址
-KERNEL_SOURCE=https://github.com/wu17481748/OPPO-A72
+KERNEL_SOURCE=https://githubfast.com/knackwang/android_kernel_xiaomi_msm8998
 #内核源码分支
 KERNEL_SOURCE_BRANCH=main
 #内核编译配置
-KERNEL_CONFIG=oppo6853_debug_defconfig
+KERNEL_CONFIG=chiron_defconfig
 #内核Image.gz-dtb or Image
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
