--- a/config.env
+++ b/config.env
@@ -62,4 +62,4 @@ NEED_DTBO=false
 
 # 构建内核直链接Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+SOURCE_BOOT_IMAGE=https://mirrors.ustc.edu.cn/lineageos/full/chiron/20230720/boot.img
